crates/herder-tui/src/views/snapshots/herder_tui__views__tests__the_palette_shows_why_a_command_failed.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 100, 12).backend()"
---
" herder        inbox 0 « │                                                                          "
"                         │                                                                          "
" machines     by machine │                                                                          "
"  ◉ box                1 │                                                                          "
"▶   ├ ◉ app · api        │                                                                          "
" ─────────────────────── │                                                                          "
" attention      priority │                                                                          "
"  ◉ api · app · box      │  ┃  Write a prompt…                                                      "
" ─────────────────────── │  ╹                                                                       "
" + new            ≡ menu │                                                                          "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
"  PROMPT   enter send  alt+enter newline  / commands  @ mention  esc navigate                ● box  "
