crates/herder-tui/src/views/snapshots/herder_tui__views__tests__the_phone_switcher_lists_attention_projects_views_and_the_menu.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 45, 34).backend()"
---
" switch                             close x  "
" ! 1 need you  * 3 running  v 1 done         "
"                                             "
" attention                                   "
"  ! docs - app                          box  "
"  v fix-login - app                     box  "
"  * api - app                           box  "
"  * write tests - app                   box  "
"  * p2d-1-design - herder                m2  "
"                                             "
" projects                                    "
"  ! app                               box 1  "
">   | * api                               1  "
"    | | * write tests                        "
"    | ` ! docs                            ?  "
"    ` v fix-login                            "
"  * herder                               m2  "
"    ` * p2d-1-design                         "
"  o infra                               box  "
"    ` o k3s                                  "
"  + new session                              "
"                                             "
" views                                       "
"  inbox 1   prs 1   accounts   fleet         "
"                                             "
" menu                                        "
"  keys   reconnect   quit                    "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
" > open   n new   s switch   t term   : cmd  "
