crates/herder-tui/src/views/snapshots/herder_tui__views__tests__the_session_list_badges_each_sessions_prs.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder                                                              inbox 0  + "
"┌ sessions ──────────────────┐┌────────────────────────────────────────────────┐"
"│● box (4)                   ││                                                │"
"│ needs you ▾ a… (2) #7✓ #9✗!││                                                │"
"│ running   └ write the t… #8││                                                │"
"│ error     └ document it    ││       Select a session and press Enter.        │"
"│ idle      app · herder/fix…││                                                │"
"│                            ││                                                │"
"└────────────────────────────┘└────────────────────────────────────────────────┘"
" ● box connected                                                 ? help  q quit "
