crates/herder-tui/src/views/snapshots/herder_tui__views__tests__the_sidebar_collapses_to_glyphs_and_the_details_lay_over_the_main_pane.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 100, 30).backend()"
---
" » │  chat   tasks 2   prs 1   term                      │ ● api  running                           "
"   │                                                     │ herder/api · box · ~/src/app             "
" ◉ │     ⎇ #12 Add health endpoint · open · ci ✓         │ claude-main · claude-opus · ask          "
" ● │                                                     │                                          "
" ○ │  ┃                                                  │ Usage · claude-main                      "
"   │  ┃ Add a health endpoint and test it.               │ Session                        38%       "
" ─ │  ┃                                                  │ Weekly                         12%       "
" ◉ │                                                     │ failover on                              "
" ✓ │     + Thought: Where the router lives.              │                                          "
" ● │                                                     │ Tasks 2                                  "
" ● │  ┃                                                  │ ● write tests                            "
" ● │  ┃ $ cargo test --workspace                         │ ◉ docs ?                                 "
"   │  ┃ running 12 tests                                 │                                          "
"   │  ┃ test health::ok ... ok                           │ Pull requests                            "
"   │  ┃                                                  │ #12 ✓ Add health endpoint                "
"   │  ┃ test result: ok                                  │                                          "
"   │  ┃                                                  │ Resources                                "
"   │                                                     │ box  cpu  42%  mem  62%                  "
"   │     I added GET /health; it returns 200 with the bui│ cpu 12% · mem 768 MiB · 3 processes      "
"   │     it.                                             │ ● app-db-1  running                      "
"   │                                                     │ ○ app-web-1  exited                      "
"   │                                                     │ :down brings app down                    "
"   │                                                     │                                          "
"   │  ┃ Write a prompt…                                  │                                          "
"   │  ┃                                                  │                                          "
"   │  ┃ claude-main · claude-opus · ask                  │                                          "
"   │  ┃                                                  │                                          "
"   │    ⠋ working · 0s                                   │                                          "
"───┴─────────────────────────────────────────────────────┴───────────────────────────────────────── "
"  NAVIGATE   ◉ 1 waiting  j/k move  enter open  n new  v group  z fold  : commands     ● box  ● m2  "
