crates/herder-tui/src/views/snapshots/herder_tui__views__tests__the_status_line_shows_each_connection.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 100, 10).backend()"
---
"┌ sessions ─────────────────────┐┌─────────────────────────────────────────────────────────────────┐"
"│● box (4)                      ││                                                                 │"
"│ needs you ▾ app · herder/… (2)││                                                                 │"
"│ running   └ write the tests   ││                                                                 │"
"│ error     └ document it       ││                Select a session and press Enter.                │"
"│ idle      app · herder/fix-lo…││                                                                 │"
"│✗ laptop (0)                   ││                                                                 │"
"│◌ ci (0)                       ││                                                                 │"
"└───────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
" ● box connected  ✗ laptop connection refused  ◌ ci connecting                       ? help  q quit "
