crates/herder-tui/src/views/snapshots/herder_tui__views__tests__titles_100x30.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, width, height).backend()"
---
" herder        inbox 1 « │  chat   tasks 2   prs 1   term                                           "
"                         │                                                                          "
" projects     by project │                                                                          "
"  ◉ app                1 │    cpu 12% · mem 768 MiB · 3 processes                                   "
"▶   ├ ● Health endpo…  1 │    ● app-db-1  running · postgres:16                                     "
"    │ ├ ● write tests    │    ○ app-web-1  exited · node:22                                         "
"    │ └ ◉ API refere…  ? │    :down brings app down                                                 "
"    └ ✓ fix-login        │                                                                          "
"  ● herder               │                                                                          "
"    └ ● p2d-1-design     │     ⎇ #12 Add health endpoint · open · ci ✓                              "
"  ○ infra                │                                                                          "
"    └ ○ k3s              │  ┃                                                                       "
"                         │  ┃ Add a health endpoint and test it.                                    "
" ─────────────────────── │  ┃                                                                       "
" attention      priority │                                                                          "
"  ◉ API reference page   │     + Thought: Where the router lives.                                   "
"  ✓ fix-login · app      │     $ cargo test --workspace                                             "
"  ● Health endpoint for… │                                                                          "
"  ● write tests · app    │     I added GET /health; it returns 200 with the build version so        "
"  ● p2d-1-design         │     load balancers can probe it.                                         "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │  ┃ ▌Write a prompt…                                                      "
"                         │  ┃                                                                       "
"                         │  ┃ claude-main · claude-opus · ask                                       "
" ─────────────────────── │  ┃                                                                       "
" + new            ≡ menu │    ⠋ working · 0s                                   claude-main 5h 38%   "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
"  PROMPT   ◉ 1 waiting  enter send  alt+enter newline  / commands  @ mention           ● box  ● m2  "
