crates/herder-tui/src/views/snapshots/herder_tui__views__tests__titles_160x34.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, width, height).backend()"
---
" herder        inbox 1 « │  chat   tasks 2   prs 1   term                                                            │ ● Health endpoint for load ba…  running  "
"                         │                                                                                           │ herder/api · box · ~/src/app             "
" projects     by project │     ⎇ #12 Add health endpoint · open · ci ✓                                               │ auto title                               "
"  ◉ app                1 │                                                                                           │ claude-main · claude-opus · ask          "
"▶   ├ ● Health endpo…  1 │  ┃                                                                                        │                                          "
"    │ ├ ● write tests    │  ┃ Add a health endpoint and test it.                                                     │ Usage · claude-main                      "
"    │ └ ◉ API refere…  ? │  ┃                                                                                        │ Session  ━━━━━━━━━━━━━━━━━━━━  38%       "
"    └ ✓ fix-login        │                                                                                           │ Weekly   ━━━━━━━━━━━━━━━━━━━━  12%       "
"  ● herder               │     + Thought: Where the router lives.                                                    │                                          "
"    └ ● p2d-1-design     │     $ cargo test --workspace                                                              │ Tasks 2                                  "
"  ○ infra                │                                                                                           │ ● write tests                            "
"    └ ○ k3s              │     I added GET /health; it returns 200 with the build version so load balancers can      │ ◉ API reference page ?                   "
"                         │     probe it.                                                                             │                                          "
" ─────────────────────── │                                                                                           │ Pull requests                            "
" attention      priority │                                                                                           │ #12 ✓ Add health endpoint                "
"  ◉ API reference page   │                                                                                           │                                          "
"  ✓ fix-login · app      │                                                                                           │ Resources · box                          "
"  ● Health endpoint for… │                                                                                           │ cpu    42%                               "
"  ● write tests · app    │                                                                                           │ mem    62%                               "
"  ● p2d-1-design         │                                                                                           │ psi    12%                               "
"                         │                                                                                           │ turns  2/4                               "
"                         │                                                                                           │ cpu 12% · mem 768 MiB · 3 processes      "
"                         │                                                                                           │ ● app-db-1  running                      "
"                         │                                                                                           │ ○ app-web-1  exited                      "
"                         │                                                                                           │ :down brings app down                    "
"                         │                                                                                           │                                          "
"                         │                                                                                           │                                          "
"                         │  ┃ ▌Write a prompt…                                                                       │                                          "
"                         │  ┃                                                                                        │                                          "
"                         │  ┃ claude-main · claude-opus · ask                                                        │                                          "
" ─────────────────────── │  ┃                                                                                        │                                          "
" + new            ≡ menu │    ⠋ working · 0s                                                     claude-main 5h 38%  │                                          "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────── "
"  PROMPT   ◉ 1 waiting  enter send  alt+enter newline  / commands  @ mention  esc navigate  ctrl+c stop  ctrl+x leader                             ● box  ● m2  "
