crates/herder-tui/src/views/snapshots/herder_tui__views__tests__titles_switcher_45x34.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 45, 34).backend()"
---
" switch                             close x  "
" ! 1 need you  * 3 running  v 1 done         "
"                                             "
" attention                                   "
"  ! API reference page - app            box  "
"  v fix-login - app                     box  "
"  * Health endpoint for load balanc...  box  "
"  * write tests - app                   box  "
"  * p2d-1-design - herder                m2  "
"                                             "
" projects                                    "
"  ! app                               box 1  "
">   | * Health endpoint for load bala...  1  "
"    | | * write tests                        "
"    | ` ! API reference page              ?  "
"    ` v fix-login                            "
"  * herder                               m2  "
"    ` * p2d-1-design                         "
"  o infra                               box  "
"    ` o k3s                                  "
"  + new session                              "
"                                             "
" views                                       "
"  inbox 1   prs 1   accounts   fleet         "
"                                             "
" menu                                        "
"  keys   reconnect   quit                    "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
" > open   n new   s switch   t term   : cmd  "
