crates/herder-tui/src/views/snapshots/herder_tui__views__tests__vault_storage_160x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder        inbox 0 « │ fleet · 3 machines                                                                                                                   "
"                         │                                                                                                                                      "
" projects     by project │   ● devbox  owner  devbox.lan:7447                                                                                                   "
"  · app                  │     9c2e…9c2e · 0 accounts · 0 sessions                                                                                              "
"▶   ├ · v9               │   ● laptop  owner  10.0.0.12:7447                                                                                                    "
"    ├ · v8               │     01de…01de · 0 accounts · 0 sessions                                                                                              "
"    ├ · v7               │ ▶ ● vault  owner  vault.lan:7447                                                                                                     "
"    ├ · v6               │     3f9a…3f9a · 3 hosts · 17 sessions · disk 86%                                                                                     "
"    ├ · v5         vault │                                                                                                                                      "
"    ├ · v4         vault │   vault                                                                                                                              "
"    ├ · v3         vault │   state         connected                                                                                                            "
"    ├ · v2         vault │   role          owner                                                                                                                "
"    ├ · v17              │   backup        this is a vault                                                                                                      "
"    ├ · v16              │   disk          412.8 / 480.0 GiB, 86% · nearly full                                                                                 "
"    ├ · v15              │   hosts         devbox    4 sessions · images 340 MiB of 1.0 GiB                                                                     "
"    ├ · v14              │                 laptop    1 session  · images off                                                                                    "
"    ├ · v13              │                 old-box  12 sessions · images 980 MiB of 1.0 GiB                                                                     "
"    ├ · v12              │   host id       v                                                                                                                    "
"    ├ · v11              │   addresses     vault.lan:7447                                                                                                       "
"    ├ · v10              │   fingerprint   3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a3f9a                                                     "
"    └ · v1         vault │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
" ─────────────────────── │                                                                                                                                      "
" + new            ≡ menu │                                                                                                                                      "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── "
" j/k move  a add machine  n add account  e rename  d forget  b backup  r reconnect  esc back                                       ● devbox  ● laptop  ● vault  "
