crates/herder-tui/src/views/snapshots/herder_tui__views__tests__vault_storage_45x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" fleet                               < back  "
" all quiet                                   "
"                                             "
"  * devbox  owner                            "
"    9c2e...9c2e - 0 accounts - 0 sessions    "
"  * laptop  owner                            "
"    01de...01de - 0 accounts - 0 sessions    "
"> * vault  owner                             "
"    3f9a...3f9a - 3 hosts - disk 86%         "
"                                             "
"  vault                                      "
"  state         connected                    "
"  role          owner                        "
"  backup        this is a vault              "
"  disk          412.8 / 480.0 GiB, 86% -     "
"                nearly full                  "
"  hosts         devbox - 4 sessions          "
"                  images 340 MiB of 1.0 GiB  "
"                laptop - 1 session           "
"                  images off                 "
"                old-box - 12 sessions        "
"                  images 980 MiB of 1.0 GiB  "
"  host id       v                            "
"  addresses     vault.lan:7447               "
"  fingerprint   3f9a3f9a3f9a3f9a3f9a3f9a3f9  "
"                a3f9a3f9a3f9a3f9a3f9a3f9a3f  "
"                9a3f9a3f9a                   "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
" a add   n account   e rename   d forget     "
